examples/test/testpolicy1604.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1604
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key45: value19
      key13: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value20
          key49: value19
          key44: value3
      podSelector:
        matchLabels:
          key43: value0
